Fixed broken style for user nav dropdown and sign-in links.

--- a/src/platform/site-wide/user-nav/sass/user-nav.scss
+++ b/src/platform/site-wide/user-nav/sass/user-nav.scss
@@ -236,33 +236,37 @@ span.sidelines {
 }
 
 .sign-in-nav {
+  color: $color-white;
   margin-left: 1rem;
   white-space: nowrap;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:visited {
+      color: inherit;
+    }
+  }
+
+  button {
+    &:disabled {
+      background-color: inherit;
+      opacity: 0.7;
+    }
+  }
 }
 
+
 .sign-in-link {
-  color: $color-white !important;
+  color: inherit !important;
   text-decoration: none;
-
-  &:disabled {
-    background-color: inherit;
-    opacity: 0.7;
-  }
-
-  &:visited {
-    color: inherit;
-  }
-
-  &.disabled {
-    opacity: 0.7;
-    pointer-events: none;
-  }
 
   &:hover {
     color: $color-gold !important;
     text-decoration: underline;
   }
-};
+}
 
 .signin-spacer {
   color: $color-white;
